# InspiraView_DearPyGui_v1

./: README.txt  README_TAURI.md  main.py  package-lock.json  package.json  readme.md  run.bat
inspiraview/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
inspiraview/src/: App.css  App.tsx
inspiraview/src-tauri/: Cargo.toml  tauri.conf.json
inspiraview/src-tauri/icons/: icon.icns
inspiraview/src-tauri/src/: lib.rs  main.rs
src/: index.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
